examples/test/testpolicy9913.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9913
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key31: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value20
      podSelector:
        matchLabels:
          key24: value29
          key4: value20
          key49: value7
